# Cascar2020

./: .gitignore  README.md
cascar_pkgs/: .gitignore  INSTALL.md  README.md  ShortCascarManual.md  raspberry_install.md
cascar_pkgs/cascar/: CMakeLists.txt  package.xml
cascar_pkgs/cascar/ASCII2PWM_ODO/: ASCII2PWM_ODO.ino  README.md
cascar_pkgs/cascar/configuration_files_cartographer/: cascar.lua  cascar_slam_demo.rviz
cascar_pkgs/cascar/develop/: .gitignore  README.md
cascar_pkgs/cascar/launch/: cascar.launch  cascar_dead_reck.launch  cascar_full.launch  cascar_lidar.launch  cascar_slam_bag.launch  cascar_slam_live.launch  joy_control.launch  key_control.launch  planner.launch  planner.launch.save
cascar_pkgs/cascar/msg/: CarCommand.msg  CarSensor.msg  CarTicks.msg
cascar_pkgs/cascar/rviz/: cascar.rviz  pather.rviz
cascar_pkgs/cascar/scripts/: LogData.py  ModelPredictiveControl.py  cascar_joystick.py  cascar_logger.py  cascar_main.py  cascar_run.py  controller.py  cost_to_go.py  define_world.py  generate_mp.py  imu.py  joy_read.py  keyboard_control.py  keyboard_reader.py  lattice_planner.py  motion_primitives.py  mprims.pickle  plan_path.py  state_estimator.py  (+2 more)
cascar_pkgs/conf_scripts/: conf_scripts.md  envrosip.sh  install-pkgs.sh  requirements.txt  rosclientip.py  rosmasterip.py  rosmasterip.service  setrosclient.sh  setrosmaster.sh  usercfg.txt
cascar_pkgs/mocap_base/: README.md
cascar_pkgs/mocap_qualisys/: README.md
cascar_pkgs/playground/: CMakeLists.txt  package.xml
cascar_pkgs/playground/src/: cascar_test_node.py  lidar_reader.py
(+29 files in other folders)
